add facebook video for gibsy

--- a/views/gibsy.ejs
+++ b/views/gibsy.ejs
@@ -31,15 +31,15 @@
                     cui
                     Hitler saliva al
                     potere.
-                <p>Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva
+                    Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva
                     l’ostilità
                     dei
                     nazisti che
-                    numerosissimi andavano ai sui incontri sperando di vederlo perdere.</p>
+                    numerosissimi andavano ai sui incontri sperando di vederlo perdere.
 
 
 
-                <hr>
+                    <hr>
             </div>
 
             <div class="col-sm">
@@ -109,6 +109,18 @@
                     campione ha escogitato, prima del suo declino.
                 </p>
                 <hr>
+            </div>
+            <!-- Load Facebook SDK for JavaScript -->
+            <div id="fb-root"></div>
+            <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
+
+            <!-- Your embedded video player code -->
+            <div class="fb-video" data-href="https://www.facebook.com/watch/?v=236461124615471" data-width="500"
+                data-show-text="false">
+                <div class="fb-xfbml-parse-ignore">
+
+
+                </div>
             </div>
 
         </div>
