--- a/views/panediferro.ejs
+++ b/views/panediferro.ejs
@@ -42,7 +42,19 @@
                 la
                 video art.
             </p>
+            <!-- Load Facebook SDK for JavaScript -->
+            <div id="fb-root"></div>
+            <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
 
+            <!-- Your embedded video player code -->
+            <div class="fb-video"
+                data-href="https://www.facebook.com/watch/?ref=search&v=10152480296219193&external_log_id=3a6f6682-52e5-41eb-8580-7230972c99a7&q=teatro%20delle%20stanze"
+                data-width="500" data-show-text="false">
+                <div class="fb-xfbml-parse-ignore">
+
+
+                </div>
+            </div>
 
 
         </div>
