--- a/views/attori.ejs
+++ b/views/attori.ejs
@@ -2,27 +2,33 @@
 
     <%-include("navbar") -%>
 
-        <!-- <div class="container-fluid"> -->
+        <div class="container-fluid">
+            <div class="row">
 
 
-        <div class="card show-content" style="width: 18rem;">
-            <img src="images/DiegoCV.jpg" class="card-img-top embed-responsive-item " alt="...">
-            <div class="card-body">
 
-                <h3>Diego Conforti</h3>
-                <p>Nel 1994 inizia con i corsi di Patrizia Corti e Andrè Casaca, successivamente collabora con
-                    Giallo Mare minimal teatro
-                    anche come formatore, al quale ha unito un percorso riconosciuto dal ministero
-                    dell’Istruzione MIUR quale Operatore per
-                    teatro ragazzi. Oltre che collaborare stabilmente col Teatro del Popolo di Castelfiorentino,
-                    ha lavorato anche in
-                    produzioni di Angelo e Andrea Savelli e Giovanni Guidelli.</p>
-                <a href="#" class="readmore-btn">Leggi</a>
+
+                <div class="card show-content" style="width: 18rem;">
+                    <img src="images/DiegoCV.jpg" class="card-img-top embed-responsive-item " alt="...">
+                    <div class="card-body">
+
+                        <h3><b>Diego Conforti</b> </h3>
+                        <p>Nel 1994 inizia con i corsi di Patrizia Corti e Andrè Casaca, successivamente collabora con
+                            Giallo Mare minimal teatro
+                            anche come formatore, al quale ha unito un percorso riconosciuto dal ministero
+                            dell’Istruzione MIUR quale Operatore per
+                            teatro ragazzi. Oltre che collaborare stabilmente col Teatro del Popolo di Castelfiorentino,
+                            ha lavorato anche in
+                            produzioni di Angelo e Andrea Savelli e Giovanni Guidelli.</p>
+                        <a href="#" class="readmore-btn">more</a>
+
+
+                    </div>
+                </div>
 
 
             </div>
         </div>
-        <!-- </div> -->
 
         <!-- <div class="album py-5 bg-dark">
             <div class="container">
