--- a/views/giovanni.ejs
+++ b/views/giovanni.ejs
@@ -1,7 +1,7 @@
 <%-include("header") -%>
 
     <%-include("navbar") -%>
-        <div class="container-fluid description">
+        <div class="container-fluid ">
             <div class="title">
                 <h1>
                     Giovanni VIII
@@ -39,6 +39,7 @@
                     <img src="images/GiovannaElodie.jpg" alt="bambina">
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p>Siamo nell’ 857 e il popolo si raccomanda a Giovanni VIII che ha imparato ad amare nei suoi
                         due
                         anni di
@@ -51,6 +52,7 @@
                         donna e il bambino fuori dalle mura e li uccide entrambi lapidandoli. In altre versioni la
                         papessa sarebbe morta subito
                         dopo il parto oppure, una volta scoperta, rinchiusa in un convento.</p>
+                    <hr>
 
                 </div>
 
@@ -61,6 +63,7 @@
 
             <div class="row">
                 <div class="col-sm">
+                    <hr>
                     <p>
                         Ma non è molto importante la verità; per molti si tratta addirittura di una leggenda. Sta di
                         fatto che è un materiale
@@ -71,6 +74,7 @@
                         di Michael Anderson, 1972, con Liv Ullmann, e “La papessa” di S. Wortmann, 2009, con Johanna
                         Wokalek.
                     </p>
+                    <hr>
                 </div>
                 <div class="col-sm">
                     <img src="images/GiovannaPaola.jpg" alt="donna" id="GiovannaPaola">
@@ -86,6 +90,7 @@
                     <img src="images/Giovannaporta.jpg" alt="ragazza" id="Giovannaporta">
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p>È interessante il materiale, la figura di Giovanna e il contesto
                         storico: il ritratto e lo
                         sfondo.
@@ -98,7 +103,7 @@
                         intrecci politici, che si
                         annodano a quelli della chiesa, la fanno da padrone.
                     </p>
-
+                    <hr>
                 </div>
 
             </div>
