--- a/views/panediferro.ejs
+++ b/views/panediferro.ejs
@@ -7,41 +7,106 @@
                 <h3>regia di Marco Natalucci</h3>
             </div>
 
-            <img class="image-center image-fluid" src="images/panediferrovagone.jpg" alt="panediferro">
-            <p style="padding-top: 7%">
-                <b>Pane di Ferro</b> nasce come spettacolo teatrale itinerante di attori e attrici e musicisti che
-                raccontano
-                l’evoluzione storica e culturale di un territorio come la Valdelsa prendendo a spunto l’eterno tema
-                del
-                viaggio su
-                un tracciato\palcoscenico. <br>
-            <p>L’espediente narrativo della ferrovia ha permesso così di raccontare
-                l’incedere del tempo simulando un viaggio su di un treno immaginario, “navicella temporale” densa di
-                ricordi
-                e aneddoti di chi ha vissuto un'epoca trascorsa che permette a noi contempoanei di “tornare a
-                quel punto di partenza - citando Eliot- per conoscerlo per la prima volta”.</p>
-            <p>La stessa magia del
-                viaggio
-                viene
-                proposta su palcoscenico dal Teatro delle Stanze con una narrazione su dei binari immaginari che
-                ripercorrono
-                i mutamenti culturali, storici, umani che si sono succeduti sull’immutabile percorso di una ferrovia
-                nell’arco
-                di tempo che va dalla sua eclatante e pomposa apertura, fino agli eventi che ne hanno decretato
-                la definitiva dismissione.</p>
-            <p>
-                <b>Pane di Ferro</b> è un quindi evento teatrale che ha una duplice possibilità
-                scenica:
-                Lo spettacolo itinerante offre una partecipazione fisica anche del pubblico più spontanea, simulando
-                l’incedere
-                di un treno che attraversa vari episodi caratterizzanti diverse epoche storiche. 
-                La rappresentazione su palco coinvolge il pubblico in maniera più narrativa, scandendo con il
-                montaggio
-                scenico e con videoproiezioni di passaggio del tempo.  
-                In entrambi i casi, Pane di ferro ai avvale di 3 lingue: Il linguaggio teatrale, quello musicale e
-                la
-                video art.
-            </p>
+
+
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+
+                <hr>
+                <p>
+
+                    <b>Pane di Ferro</b> nasce come spettacolo teatrale itinerante di attori e attrici e musicisti che
+                    raccontano
+                    l’evoluzione storica e culturale di un territorio come la Valdelsa prendendo a spunto l’eterno tema
+                    del
+                    viaggio su
+                    un tracciato\palcoscenico.
+
+
+
+                    <hr>
+            </div>
+
+            <div class="col-sm">
+                <img src="images/panediferroSimone.jpg" alt="panediferroimg1" class="image-fluid">
+            </div>
+        </div>
+
+
+
+        <div class="row">
+
+            <div class="col-sm">
+
+                <img src="images/PanediferroDonne2 Cropped.jpg" alt="panediferroimg2" class="image-fluid">
+            </div>
+            <div class="col-sm">
+
+                <hr>
+                <p>L’espediente narrativo della ferrovia ha permesso così di raccontare
+                    l’incedere del tempo simulando un viaggio su di un treno immaginario, “navicella temporale” densa di
+                    ricordi
+                    e aneddoti di chi ha vissuto un'epoca trascorsa che permette a noi contempoanei di “tornare a
+                    quel punto di partenza - citando Eliot- per conoscerlo per la prima volta”.</p>
+                <hr>
+
+
+            </div>
+
+        </div>
+
+
+
+        <div class="row">
+            <div class="col-sm">
+                <hr>
+                <p>
+                    La stessa magia del
+                    viaggio
+                    viene
+                    proposta su palcoscenico dal Teatro delle Stanze con una narrazione su dei binari immaginari che
+                    ripercorrono
+                    i mutamenti culturali, storici, umani che si sono succeduti sull’immutabile percorso di una ferrovia
+                    nell’arco
+                    di tempo che va dalla sua eclatante e pomposa apertura, fino agli eventi che ne hanno decretato
+                    la definitiva dismissione.
+
+                </p>
+                <hr>
+            </div>
+            <div class="col-sm">
+                <img src="images/panediferroBurba.jpg" alt="panediferroimg3">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <img src="images/PanediferroBomba.jpg" class="img-fluid" alt="panediferroimg4">
+            </div>
+
+
+
+            <div class="col-sm">
+                <hr>
+                <p>
+                    <b>Pane di Ferro</b> è un quindi evento teatrale che ha una duplice possibilità
+                    scenica:
+                    Lo spettacolo itinerante offre una partecipazione fisica anche del pubblico più spontanea, simulando
+                    l’incedere
+                    di un treno che attraversa vari episodi caratterizzanti diverse epoche storiche. 
+                    La rappresentazione su palco coinvolge il pubblico in maniera più narrativa, scandendo con il
+                    montaggio
+                    scenico e con videoproiezioni di passaggio del tempo.  
+                    In entrambi i casi, Pane di ferro si avvale di tre lingue: Il linguaggio teatrale, quello musicale e
+                    la
+                    video art.
+                </p>
+                <hr>
+            </div>
+
+
             <!-- Load Facebook SDK for JavaScript -->
             <div id="fb-root"></div>
             <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
